--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,12 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
+
+html,
+body,
+ion-app {
+  color-scheme: light;
+  background: #f6f8fb;
+  color: #172033;
+}
